Chat clipping fix

--- a/StreamElements/chat.css
+++ b/StreamElements/chat.css
@@ -52,7 +52,6 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 0 10px 10px;
   width: 100%;
   table-layout: fixed;
   background-color: var(--prev-color);
@@ -63,7 +62,6 @@ body {
   position: absolute;
   flex: 0 0 auto;
   width: 100%;
-  bottom: 50px;
   vertical-align: baseline;
   margin-bottom: 50px;
 }
